Closed Bug 414095 Opened 18 years ago Closed 18 years ago

Cairo update 1/25/08 causing serious repaint issues

Categories

(Core :: Graphics, defect, P1)

x86
Windows Vista
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: jmjjeffery, Assigned: vlad)

References

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3pre) Gecko/2008012518 Minefield/3.0b3pre Firefox/3.0 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3pre) Gecko/2008012518 Minefield/3.0b3pre Firefox/3.0 Since the update to the latest Cairo - I'm seeing serious repaint issues on web pages. Reproducible: Always Steps to Reproduce: 1. Open the t-box page 2. Using the mouse quickly drag the page vertical or horizontal and note the page gets real messy 3. Actual Results: Rendering issues Expected Results: No rendering issues Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3pre) Gecko/2008012518 Minefield/3.0b3pre Firefox/3.0 ID:2008012518 Latest hourly build.
Flags: blocking-firefox3?
Version: unspecified → Trunk
Keywords: regression
Component: General → GFX: Thebes
Flags: blocking-firefox3?
Product: Firefox → Core
QA Contact: general → thebes
Not really noticable here, unless I middle-click mousewheel, and then scroll diagonally. (same build)
Flags: blocking1.9?
Load several tabs - MSNBC.com on one tab, CNN.com on another. Switch to another tab, like bugzilla, or the t-box page. Scroll around on any page. Switch now back to MSNBC and note the weirdness and graphical elements appear on page as you mouse over the page.
Download dialog painting issues, too.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Over to me; I didn't notice anything on my XP system while testing, but I'll try on Vista now.
Assignee: nobody → vladimir
Flags: blocking1.9? → blocking1.9+
Priority: -- → P1
(In reply to comment #1) > Not really noticable here, unless I middle-click mousewheel, and then scroll > diagonally. (same build) > Umm...same build, but different OS. XP SP2 here.
Attached image screenshot
20080125_1630_firefox-3.0b3pre.en-US.win32.zip
Attached patch patch, I thinkSplinter Review
Ok, here's a patch that I'm going to check in in time for tomorrow's nightly. I'm not entirely happy with it, but it seems to fix the problem and is more-or-less correct. Thanks for the screenshot btw -- using the menus was a lot easier to reproduce than doing it with web pages :)
Attachment #299399 - Flags: review+
Checked in; let me know if this still happens (I guess I'll find out tomorrow)... if it's fixed, I'll have to revisit that "this should never happen" comment :)
I just downloaded the latest hourly, and been using it about 45 mins now, and so far looks OK to me, no more paint issues. Some with a keener eye than mine may want to verify as well. Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3pre) Gecko/2008012602 Minefield/3.0b3pre Firefox/3.0 ID:2008012602
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008012602 Minefield/3.0b3pre ID:2008012602 is fine now marking FIXED thanks Vlad
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Should we clobber to prevent more reports?
I think I got it in before the nightly; folks have been testing with the hourly builds.
Yep - you did. Nevermind
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: