b=414095, serious win32 repaint/clipping issues, r=sleepy